# pum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dist-workspace.toml  justfile
.github/workflows/: ci.yml  release.yml
apps/pum/: Cargo.toml  deny.toml  pum.py  pyproject.toml  rust-toolchain.toml
apps/pum/src/: audit.rs  main.rs  mcp.rs  project.rs  run.rs  types.rs
apps/pum/src/adapters/: brew.rs  bun.rs  cargo.rs  gem.rs  gh.rs  go.rs  mise.rs  mod.rs  npm.rs  pipx.rs  pnpm.rs  rustup.rs  uv.rs
apps/pum/tests/: test_parsers.py
docs/: AUDIT_2026-07-23.md  RELEASE.md  SPEC.md
docs/assets/: README.md  demo.tape
