[package]
name = "pum"
version = "0.1.0"
edition = "2024"
description = "Package Update Manager — adapter-based multi-manager update tool (Rust port)"
default-run = "pum"

[[bin]]
name = "pum"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
which = "6"
