[package]
name = "pum"
version = "0.1.1"
edition = "2024"
description = "Package Update Manager — one binary, 12 adapters, --json everywhere. For humans and AI coding agents."
default-run = "pum"
license = "MIT"
repository = "https://github.com/Supersynergy/pum"
homepage = "https://github.com/Supersynergy/pum"
readme = "../../README.md"
authors = ["Maxim M"]
keywords = ["package-manager", "cli", "updates", "devtools", "audit"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.96"

[[bin]]
name = "pum"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
which = "6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
