[package]
name = "pum"
version = "0.2.0"
edition = "2024"
description = "PUM (Package Update Manager): local package freshness CLI and MCP server."
default-run = "pum"
license = "MIT"
repository = "https://github.com/Supersynergy/pum"
homepage = "https://github.com/Supersynergy/pum"
readme = "../../README.md"
authors = ["Maxim M"]
keywords = ["package-manager", "package-updater", "mcp", "duckdb", "homebrew"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.96"

[[bin]]
name = "pum"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# DuckDB is the live inventory/history store. rusqlite remains only to import a
# pre-0.2 SQLite inventory once; it can be removed in the next breaking release.
duckdb = { version = "=1.10505.0", features = ["bundled"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
which = "8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
