[project]
name = "pum"
version = "0.1.0"
description = "Package Update Manager — adapter-based multi-manager CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pum = "pum:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
